# xml-copy-editor

./: .clang-format  .cproject  .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  TODO  aclocal.m4  autogen.sh  checkinstall.sh  config.guess  config.sub  configure  configure.ac  configure.in  depcomp  install-sh  libtool  ltmain.sh  missing
data/: Makefile.am  Makefile.in  xmlcopyeditor.appdata.xml.in  xmlcopyeditor.desktop.in
src/: .cproject  Makefile.am  Makefile.in  aboutdialog.cpp  aboutdialog.h  aspellpaths.h  associatedialog.cpp  associatedialog.h  binaryfile.cpp  binaryfile.h  casehandler.cpp  casehandler.h  catalogresolver.cpp  catalogresolver.h  catalogresolverthread.cpp  catalogresolverthread.h  commandpanel.cpp  commandpanel.h  contexthandler.cpp  contexthandler.h  custom.xpm  dos2unix.h  dtd2schema.cpp  dtd2schema.h  exportdialog.cpp  exportdialog.h  findreplacepanel.cpp  findreplacepanel.h  getlinuxappdir.cpp  getlinuxappdir.h  getword.cpp  getword.h  globalreplacedialog.cpp  globalreplacedialog.h  housestyle.cpp  housestyle.h  housestylereader.cpp  housestylereader.h  housestylewriter.cpp  housestylewriter.h  (+115 more)
src/catalog/: catalog
src/copying/Spell_Checker_Oriented_Word_Lists/: copying.txt
src/copying/wxCoolBar/: copying.txt
src/copying/xmlcopyeditor/: copying.txt
src/de/: messages.mo  messages.po
src/docbook/: VERSION
src/docbook/common/: af.xml  am.xml  ar.xml  autoidx-kimber.xsl  autoidx-kosek.xsl  autoidx-ng.xsl  az.xml  bg.xml  bn.xml  bs.xml  ca.xml  common.xsl  cs.xml  cy.xml  da.xml  de.xml  el.xml  en.xml  es.xml  et.xml  eu.xml  fa.xml  fi.xml  fr.xml  ga.xml  gentext.xsl  gu.xml  he.xml  hi.xml  hr.xml  hu.xml  id.xml  it.xml  ja.xml  kn.xml  ko.xml  l10n.xsl  la.xml  labels.xsl  lt.xml  (+34 more)
src/docbook/fo/: admon.xsl  autoidx-kimber.xsl  autoidx-kosek.xsl  autoidx.xsl  autotoc.xsl  axf.xsl  biblio.xsl  block.xsl  callout.xsl  component.xsl  division.xsl  docbook.xsl  ebnf.xsl  fo-patch-for-fop.xsl  fo-rtf.xsl  fo.xsl  footnote.xsl  fop.xsl  formal.xsl  glossary.xsl  graphics.xsl  htmltbl.xsl  index.xsl  info.xsl  inline.xsl  keywords.xsl  lists.xsl  math.xsl  pagesetup.xsl  param.ent  param.xml  param.xsl  param.xweb  pi.xsl  profile-docbook.xsl  qandaset.xsl  refentry.xsl  sections.xsl  synop.xsl  table.xsl  (+7 more)
src/docbook/html/: admon.xsl  autoidx-kimber.xsl  autoidx-kosek.xsl  autoidx-ng.xsl  autoidx.xsl  autotoc.xsl  biblio.xsl  block.xsl  callout.xsl  changebars.xsl  chunk-code.xsl  chunk-common.xsl  chunk.xsl  chunker.xsl  chunkfast.xsl  chunktoc.xsl  component.xsl  division.xsl  docbook.xsl  ebnf.xsl  footnote.xsl  formal.xsl  glossary.xsl  graphics.xsl  html-rtf.xsl  html.xsl  htmltbl.xsl  index.xsl  info.xsl  inline.xsl  keywords.xsl  lists.xsl  maketoc.xsl  math.xsl  oldchunker.xsl  onechunk.xsl  param.ent  param.xml  param.xsl  param.xweb  (+15 more)
src/docbook/lib/: lib.xml  lib.xsl  lib.xweb
src/docbook/xhtml/: admon.xsl  autoidx-kimber.xsl  autoidx-kosek.xsl  autoidx-ng.xsl  autoidx.xsl  autotoc.xsl  biblio.xsl  block.xsl  callout.xsl  changebars.xsl  chunk-code.xsl  chunk-common.xsl  chunk.xsl  chunker.xsl  chunkfast.xsl  chunktoc.xsl  component.xsl  division.xsl  docbook.xsl  ebnf.xsl  footnote.xsl  formal.xsl  glossary.xsl  graphics.xsl  highlight.xsl  html-rtf.xsl  html.xsl  htmltbl.xsl  index.xsl  info.xsl  inline.xsl  keywords.xsl  lists.xsl  maketoc.xsl  manifest.xsl  math.xsl  oldchunker.xsl  onechunk.xsl  param.xsl  pi.xsl  (+14 more)
src/en_us/: messages.po
src/filters/: OpenDocument.xml  WordprocessingML.xml  filter.xsd
src/fr/: messages.po
src/help/: xmlcopyeditor.chm  xmlcopyeditor.hhp
src/help/html/: appendix.html  association.html  attribute_hiding.html  completion.html  creating_filters.html  creating_rulesets.html  default_rulesets.html  editor.html  features.html  folding.html  font_size.html  general.html  getting_started.html  large_documents.html  printing.html  processing.html  spelling.html  spelling_intro.html  syntax.html  tag_locking.html  templates.html  validation.html  word.html  word_integration.html  xml.html  xmlcopyeditor.html
src/png/: Thumbs.db
src/po/: translate.txt
src/po/en_us/: messages.mo  messages.po
src/po/esp/: messages.mo
src/po/fr/: messages.mo
src/po/it/: messages.po
src/po/km/: messages.mo  messages.po
src/po/ru/: messages.mo
src/po/sk/: messages.mo
src/po/zh_CN/: messages.mo
src/sk/: sk.po
src/sk/backup/: sk.po
src/sv/: messages.mo  messages.po
src/tei/: i18n.xml  odd.css  tei.css  teic.css  teislides.css
src/tei/common/: core.xsl  figures.xsl  header.xsl  i18n.xsl  linking.xsl  tei-param.xsl  tei.xsl  textstructure.xsl  verbatim.xsl
src/tei/fo/: core.xsl  corpus.xsl  drama.xsl  figures.xsl  header.xsl  linking.xsl  namesdates.xsl  tagdocs.xsl  tei-makecolspec.xsl  tei-param.xsl  tei.xsl  textstructure.xsl  verse.xsl
src/tei/html/: core.xsl  corpus.xsl  dictionaries.xsl  drama.xsl  figures.xsl  header.xsl  linking.xsl  namesdates.xsl  tagdocs.xsl  tei-param.xsl  tei.xsl  textstructure.xsl  verse.xsl
src/tei/latex/: core.xsl  corpus.xsl  drama.xsl  figures.xsl  header.xsl  linking.xsl  namesdates.xsl  tagdocs.xsl  tei-param.xsl  tei.xsl  textstructure.xsl  verse.xsl
src/tei/odds/: RngToRnc.xsl  expandincludes.xsl  manglexsd.xsl  nomorechoice.xsl  odd2dtd.xsl  odd2html.xsl  odd2lite.xsl  odd2odd.xsl  odd2relax.xsl  simplifyfordtd.xsl  simplifyforxsd.xsl  subsetGuidelines.xsl  teiodds.xsl  translate-odd.xsl
src/tei/slides/: slides-common.xsl  teihtml-slides.xsl  teilatex-slides.xsl
src/tei/xhtml/: core.xsl  corpus.xsl  dictionaries.xsl  drama.xsl  figures.xsl  header.xsl  linking.xsl  namesdates.xsl  tagdocs.xsl  tei-param.xsl  tei.xsl  textstructure.xsl  verse.xsl
src/templates/: DocBook 4.4 article.xml  DocBook 4.4 book.xml  DocBook 5.0b article.xml  DocBook 5.0b book.xml  DocBook_5.0b_article.xml  DocBook_5.0b_book.xml  OpenLearn document.xml
src/uk_UA/: messages.mo  messages.po
src/xpm/: appicon.xpm
src/xsl/openlearn2daisyhtml/: heading.xsl  (+4 more)
src/zh_CN/: messages.mo  zh_CN.po
src/zh_TW/: messages.po
(+38 files in other folders)
